--- a/my-blog/.env
+++ b/my-blog/.env
@@ -14,6 +14,7 @@ MB_EMAIL_PORT=
 MB_DEFAULT_FROM_EMAIL=
 
 MB_MEDIA_ROOT=/var/www/media
+SA_MEDIA_URL=/media/
 MB_STATIC_ROOT=/var/www/static
 MB_STATIC_URL=/static/
 
@@ -21,12 +22,3 @@ MB_REGISTRY_URL=
 
 MB_UWSGI_PROCESSES=1
 MB_DEBUG=true
-
-# Set to 1 if you're testing your setup to avoid hitting request limits
-MB_SSL_STAGING=0
-MB_SSL_DOMAINS=example.org
-# Adding a valid address is strongly recommended
-MB_SSL_EMAIL=""
-MB_SSL_RSA_KEY_SIZE=4096
-MB_NGINX_API_USER=foo
-MB_NGINX_API_PASSWORD=bar
