--- a/my-blog/web/uwsgi.ini
+++ b/my-blog/web/uwsgi.ini
@@ -10,7 +10,8 @@ home = /venv
 master = true
 # maximum number of worker processes
 enable-threads = true
-socket = :$(MB_WEB_PORT)
+http-socket = :$(MB_WEB_PORT)
 # https://uwsgi-docs.readthedocs.io/en/latest/StaticFiles.html
 static-map = $(MB_STATIC_URL)=/$(MB_STATIC_ROOT)
+static-map = $(MB_MEDIA_URL)=/$(MB_MEDIA_ROOT)
 vacuum = true
