--- a/my-blog/docker-compose.override.yml.example
+++ b/my-blog/docker-compose.override.yml.example
@@ -1,8 +1,5 @@
 version: "3.8"
 services:
-    nginx:
-        ports:
-            - "${MB_WEB_PORT}:80"
     web:
         build:
             args:
@@ -17,6 +14,8 @@ services:
             - UWSGI_PY_AUTORELOAD=2
             # Remote dev server host
             #- WEB_HOST=192.168.0.111
+        ports:
+            - "${SA_WEB_PORT}:${SA_WEB_PORT}"
     db:
         volumes:
             - dbdata:/var/lib/postgresql/data/
