--- a/my-blog/.env
+++ b/my-blog/.env
@@ -14,7 +14,7 @@ MB_EMAIL_PORT=
 MB_DEFAULT_FROM_EMAIL=
 
 MB_MEDIA_ROOT=/var/www/media
-SA_MEDIA_URL=/media/
+MB_MEDIA_URL=/media/
 MB_STATIC_ROOT=/var/www/static
 MB_STATIC_URL=/static/
 
